[package]
name = "chargehq_enphase_uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
enphase = "0.3.2"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = "1.0.167"
serde_json = "1.0.100"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html